# Calculator

./: CMakeLists.txt  NOD  NOK  Token.cpp  Token.h  Tokenizer.h  expr.cpp  expr.h  funcs.cpp  funcs.h  main.cpp  math_functions.h  rational.cpp  rational.h  remainder of division  rpn.cpp  rpn.h  simple  sqrt  tokenizer.cpp
build-Calcalator-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Calcalator-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/Calcalator_autogen/: deps
build-Calcalator-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/Calcalator_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-Calcalator-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/Calcalator_autogen/include/: ui_mainwindow.h
